1. Corrected xcompile parameters in CMake file 2. Reduced shared library dependence on dds
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@68 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/Extensions/bin/CMakeLists.txt
+++ b/Extensions/bin/CMakeLists.txt
@@ -30,17 +30,7 @@ SET (BOOST_PACKAGES
     )
 
 SET (DDS_PACKAGES
-    ddsdatabase
-    dcpsgapi
     dcpssacpp
-    ddsos
-    ddsutil
-    ddsserialization
-    ddskernel
-    ddsuser
-    ddsosnet
-    ddsconf
-    ddsconfparser
     )
 
 ADD_EXECUTABLE (msgserver
@@ -74,6 +64,8 @@ INSTALL (TARGETS msglogger
     LIBRARY DESTINATION lib
     ARCHIVE DESTINATION lib
     )
+
+MESSAGE(${CMAKE_CROSSCOMPILING})
 
 # Include Qt4 module
 IF (NOT CMAKE_CROSSCOMPILING)
