--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,13 @@ LINK_DIRECTORIES(
     )
 
 # Install directory
-SET (CMAKE_INSTALL_PREFIX ${MessageFacility_SOURCE_DIR}/build)
+SET (FLAVOR ${CMAKE_HOST_SYSTEM_NAME}.${CMAKE_HOST_SYSTEM_PROCESSOR})
+
+IF (CMAKE_CROSSCOMPILING)
+    SET (FLAVOR ${CMAKE_SYSTEM_NAME}.${CMAKE_SYSTEM_PROCESSOR})
+ENDIF (CMAKE_CROSSCOMPILING)
+
+SET (CMAKE_INSTALL_PREFIX ${MessageFacility_SOURCE_DIR}/build/${FLAVOR})
 
 INSTALL (FILES
     CMakeLists.txt
