1. Added expression "NIL" to the parser, and corresponding nil object in the ParameterSet 2. The nil objects will be filled in the extended arraies
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@70 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/test/MessageFacility.cfg
+++ b/test/MessageFacility.cfg
@@ -47,8 +47,12 @@ tic_tac_toe : "#"
 i : 6.0
 i : 7.9
 i : 8
-j : true 
+j : .true 
 j : -4.5e2
+
+n : .nil
+n : .NIL
+
 
 #aa
 
@@ -78,7 +82,7 @@ MF : {
 
   limit : 30 ,
 
-  b : true ,
+  b : .true ,
 
   mflog : {
     output : "MFLog" ,
