Big changes to the parser: 1. Re-arranged grammar for references 2. Used findEntryPtr() uniformly for references resolving and substitution 3. Added reference parser to parse the reference string 4. ParameterSetParser can accept either a filename or a string 5. Added an additional whitespace at the end of parsing string to avoid parsing error 6. Added an example cfg file and a test cfg file etc...
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@71 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,7 +10,7 @@ LINK_DIRECTORIES (
     )
 
 CONFIGURE_FILE (
-    ${CMAKE_CURRENT_SOURCE_DIR}/MessageFacility.cfg
+    ${CMAKE_CURRENT_SOURCE_DIR}/MessageFacilityTest.cfg
     ${CMAKE_CURRENT_BINARY_DIR}/MessageFacility.cfg
     COPYONLY
     )
@@ -32,6 +32,7 @@ TARGET_LINK_LIBRARIES (MFTest
 
 INSTALL (FILES
     mfexample.cc
+    MessageFacility.cfg
     DESTINATION example
     )
 
