1. Added ConfigurationFile() to the second argument of StartMessageService() to allow use customized configuration file 2. Re-arranged the behavior of deploying configurations in such a way that, it looks for "MessageFacility.cfg", or other specified filename. If failed, use LogCF() as default 3. Added the support of using environment variables ${...} when specifying conf file path and name 4. Fixed the bug of dropping DDS messages at server side, for both msgviewer and msgserver
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@72 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/test/MessageFacility.cfg
+++ b/test/MessageFacility.cfg
@@ -15,7 +15,7 @@ MessageFacility : {
   # detailed configuration for MFLog
   MFLog : {
     # output filename
-    output = "MFLog",
+    output : "MFLog",
     # settings for WARNING
     WARNING : {
       # limitation of messages over a period of time
