Changes to the configuration language and parser: 1. Prohibited '|' in the names 2. Prohibited 'nil', 'null', 'true', and 'false' for being a valid name 3. '.' no longer needed before a special value, like '.nil' or '.true'. Simply use 'nil' or 'true'
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@80 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/test/MessageFacilityTest.cfg
+++ b/test/MessageFacilityTest.cfg
@@ -47,11 +47,10 @@ tic_tac_toe : "#"
 i : 6.0
 i : 7.9
 i : 8
-j : .true 
+j : true 
 j : -4.5e2
 
-n : .nil
-n : .NIL
+n : nil
 
 
 #aa
@@ -76,18 +75,23 @@ warning : { limit : 10 }
 
 MessageFacility : {
   matrix : [[11,12],[21,22],[31,32]],
-  destinations : [ "mflog", "DDS|test"],
+  destinations : [ "cout", "mflog", "DDS|test"],
 
   f : -4.5e2 ,
 
   limit : 30 ,
 
-  b : .true ,
+  b : true ,
+
+  cout : {
+    useMilliseconds : false
+  },
 
   mflog : {
     output : "MFLog" ,
     WARNING : pset1.warning@file,
-    noLineBreaks : j@file
+    noLineBreaks : j@file,
+    useMilliseconds : true
   },
 
   pset1 : 2
