Changes to example and test configuration files for new configuring model
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@89 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/test/MessageFacility.cfg
+++ b/test/MessageFacility.cfg
@@ -1,25 +1,48 @@
 MessageFacility : {
   
-  # common threshold
-  threshold : "DEBUG",
+    # array of debug modules
+    debugModules : ["*"],
   
-  # array of debug modules
-  debugModules : ["*"],
-  
-  # statistics destinations (filenames)
-  statistics : ["stats"],
-  
-  # message logger destinations
-  destinations : ["cout", "MFLog", "DDS|test"],
+    # message logger destinations
+    destinations : 
+    {
+        LogToConsole : 
+        {
+            # type for stdout
+            type : "cout",
+            # threshold for this destination
+            threshold : "DEBUG",
+            # filtering based on categoreis
+            categories :
+            {
+                default : { limit : -1 }
+            }
+        },
 
-  # detailed configuration for MFLog
-  MFLog : {
-    # output filename
-    output : "MFLog",
-    # settings for WARNING
-    WARNING : {
-      # limitation of messages over a period of time
-      limit : 10
+        LogToFile :
+        {
+            # type for logging to file
+            type : "file",
+            # output file name
+            filename : "mylog",
+            # threshold filtering for this destination
+            threshold : "DEBUG",
+            # output statistics information to the output file
+            outputStatistics : true,
+            # filtering based on categories
+            categories :
+            {
+                interestingToMe : { limit : 200 },
+                default : { limit : 0 }
+            }
+        },
+
+        LogToServer :
+        {
+            # type for remote server logging
+            type : "dds",
+            # threshold filtering
+            threshold : "WARNING"
+        }
     }
-  }
 }
