--- a/test/MessageFacilityTest.cfg
+++ b/test/MessageFacilityTest.cfg
@@ -75,7 +75,28 @@ warning : { limit : 10 }
 
 MessageFacility : {
   matrix : [[11,12],[21,22],[31,32]],
-  destinations : [ "cout", "mflog", "DDS|test"],
+
+  destinations : {
+
+    console : {
+      type : "cout",
+      threshold "DEBUG"
+    },
+
+    file : {
+      type : "file",
+      filename : "mflog",
+      threshold : "DEBUG"
+      categories : {
+        default : { limit : 100 }
+      }
+    },
+
+    server : {
+      type : "dds",
+      threshold : "DEBUG"
+    }
+  },
 
   f : -4.5e2 ,
 
