1. Moved Presence class from Utilities to MessageService package to avoid circular dependency 2. Fixed typo in the configuration file
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@91 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/MessageService/src/CMakeLists.txt
+++ b/MessageService/src/CMakeLists.txt
@@ -22,6 +22,7 @@ SET (FILES
     MessageServicePresence.cc
 #    MessageServicePSetValidation.cc
     MsgContext.cc
+    Presence.cc
     SingleThreadMSPresence.cc
     ThreadQueue.cc
     )
