--- a/test/MessageFacilityTest.cfg
+++ b/test/MessageFacilityTest.cfg
@@ -80,13 +80,13 @@ MessageFacility : {
 
     console : {
       type : "cout",
-      threshold "DEBUG"
+      threshold : "DEBUG"
     },
 
     file : {
       type : "file",
       filename : "mflog",
-      threshold : "DEBUG"
+      threshold : "DEBUG",
       categories : {
         default : { limit : 100 }
       }
