use "@local" instead of "@file"
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@92 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/test/MessageFacilityTest.cfg
+++ b/test/MessageFacilityTest.cfg
@@ -36,10 +36,10 @@ AXE_WOOD : [ 0, 1, 2, 3, 4 ]
 #noSource : 0
 #parm = 17
 #jim@wilsonHall
-#jim{last}@file
-#jim[last]@file
-#jim(first)@file
-#jim(0)@file
+#jim{last}@local
+#jim[last]@local
+#jim(first)@local
+#jim(0)@local
 {a:0, a:1}
 tic_tac_toe : "#"
 
@@ -60,9 +60,9 @@ limit : [[11,12],[21,22],"dog"]
 pset1 : { //pset1
   j : 5 ,
   apset2 : {
-    i1: i@file,
-    #i2: i(0)@file,
-    #i3: i(last)@file,
+    i1: i@local,
+    #i2: i(0)@local,
+    #i3: i(last)@local,
     a : [[11,12],[21,22]]
   },
   warning : { limit : 10}
@@ -110,8 +110,8 @@ MessageFacility : {
 
   mflog : {
     output : "MFLog" ,
-    WARNING : pset1.warning@file,
-    noLineBreaks : j@file,
+    WARNING : pset1.warning@local,
+    noLineBreaks : j@local,
     useMilliseconds : true
   },
 
