Added a stand-alone ParameterSetParser example
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@102 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -19,6 +19,14 @@ ADD_EXECUTABLE (MFTest
     MFTest.cc
     )
 
+ADD_EXECUTABLE (PSetTest
+    PSetSample.cc
+    )
+
+TARGET_LINK_LIBRARIES (PSetTest
+    ParameterSetD
+    )
+
 TARGET_LINK_LIBRARIES (MFTest 
     MessageServiceD
     MessageLoggerD
