Use gettimeofday() and timeval for milliseconds, replaced ftime() and timeb
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@104 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/MessageLogger/src/CMakeLists.txt
+++ b/MessageLogger/src/CMakeLists.txt
@@ -12,6 +12,7 @@ SET (FILES
     JobReport.cc
     LoggedErrorsSummary.cc
     MessageDrop.cc
+    MessageFacilityMsg.cc
     MessageLogger.cc
     MessageLoggerQ.cc
     MessageSender.cc
