--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,7 @@ ADD_SUBDIRECTORY (MessageLogger)
 ADD_SUBDIRECTORY (MessageService)
 ADD_SUBDIRECTORY (ParameterSet)
 ADD_SUBDIRECTORY (Utilities)
-ADD_SUBDIRECTORY (Extensions)
+#ADD_SUBDIRECTORY (Extensions)
 
 ADD_SUBDIRECTORY (test)
 ADD_SUBDIRECTORY (xcompile)
