Fixed typo in finding boost library
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@128 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ INCLUDE_DIRECTORIES(
 
 # Project library directory
 LINK_DIRECTORIES(
-    ${Boost_LIBRARY_DIR}
+    ${Boost_LIBRARY_DIRS}
     $ENV{FHiCLCPP_DIR}/lib
     )
 
