--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,7 @@ IF (CMAKE_CROSSCOMPILING)
     SET (FLAVOR ${CMAKE_SYSTEM_NAME}.${CMAKE_SYSTEM_PROCESSOR})
 ENDIF (CMAKE_CROSSCOMPILING)
 
-SET (CMAKE_INSTALL_PREFIX ${MessageFacility_SOURCE_DIR}/build/${FLAVOR})
+SET (CMAKE_INSTALL_PREFIX ${MessageFacility_SOURCE_DIR}/install/${FLAVOR})
 
 INSTALL (FILES
     CMakeLists.txt
