Adopt the changes in the ParameterSet package (namespace and parser)
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@131 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/MessageService/CMakeLists.txt
+++ b/MessageService/CMakeLists.txt
@@ -15,11 +15,19 @@ ENDFOREACH (FILE)
 ADD_LIBRARY (MessageServiceD SHARED ${srcFiles})
 ADD_LIBRARY (MessageService ${srcFiles})
 
-SET_TARGET_PROPERTIES (MessageServiceD
+TARGET_LINK_LIBRARIES ( MessageServiceD
+    fhicl-cpp
+    )
+
+TARGET_LINK_LIBRARIES ( MessageService
+    fhicl-cpp
+    )
+
+SET_TARGET_PROPERTIES ( MessageServiceD
     PROPERTIES OUTPUT_NAME MF_MessageService
     )
 
-SET_TARGET_PROPERTIES (MessageService
+SET_TARGET_PROPERTIES ( MessageService
     PROPERTIES OUTPUT_NAME MF_MessageService
     )
 
