Changed include path of "ParameterSet.h" to "fhiclcpp/ParameterSet.h"
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@134 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,13 +28,13 @@ INCLUDE_DIRECTORIES(
     ${MessageFacility_SOURCE_DIR}
     ${MessageFacility_BINARY_DIR}
     ${Boost_INCLUDE_DIR}
-    $ENV{FHICLCPP_DIR}/include
+    $ENV{FHICLCPP_INC}
     )
 
 # Project library directory
 LINK_DIRECTORIES(
     ${Boost_LIBRARY_DIRS}
-    $ENV{FHICLCPP_DIR}/lib
+    $ENV{FHICLCPP_LIB}
     )
 
 # Install directory
