Cleaned up cms leftover namespaces in messagefacility
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@138 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/MessageLogger/src/CMakeLists.txt
+++ b/MessageLogger/src/CMakeLists.txt
@@ -8,7 +8,7 @@ SET (FILES
     ELseverityLevel.cc
     ELstring.cc
     ErrorObj.cc
-    ExceptionMessages.cc
+#    ExceptionMessages.cc
     JobReport.cc
     LoggedErrorsSummary.cc
     MessageDrop.cc
