--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -28,6 +28,8 @@ TARGET_LINK_LIBRARIES (MFTest
     boost_filesystem
 #    dcpssacpp
     fhiclcpp
+#    MF_Extensions
+    dl
     )
 
 INSTALL (FILES
