Fine-tune CMakeLists.txt for flavorqual
git-svn-id: svn+ssh://cdcvs.fnal.gov/cvs/projects/messagefacility-svn/trunk@144 e83639c7-b27d-0410-b729-efaafefb1b97

--- a/MessageService/CMakeLists.txt
+++ b/MessageService/CMakeLists.txt
@@ -16,11 +16,13 @@ ADD_LIBRARY (MessageServiceD SHARED ${srcFiles})
 ADD_LIBRARY (MessageService ${srcFiles})
 
 TARGET_LINK_LIBRARIES ( MessageServiceD
+    boost_thread
     fhiclcpp
     dl
     )
 
 TARGET_LINK_LIBRARIES ( MessageService
+    boost_thread
     fhiclcpp
     dl
     )
