bringing into line with cetbuildtools

--- a/ups/messagefacility.table.in
+++ b/ups/messagefacility.table.in
@@ -8,7 +8,6 @@ Qualifiers = ""
   Action = setup
        prodDir()
        exeActionRequired("setup__")
-       setupRequired(boost @BOOST_VERS@)
 
 Flavor     = Linux64bit+2.6-2.5
 Qualifiers = "@qualifier@"
@@ -17,8 +16,6 @@ Qualifiers = "@qualifier@"
        fileTest( ${UPS_PROD_DIR}/sl5.x86_64.@qualifier@, -d, "${UPS_PROD_DIR}/sl5.x86_64.@qualifier@ directory not found: SETUP ABORTED")
        envSet( ${UPS_PROD_NAME_UC}_FQ, sl5.x86_64.@qualifier@ )
        exeActionRequired("setup__")
-       setupRequired(boost @BOOST_VERS@ @BOOST_QUAL@ -f Linux64bit+2.6-2.5)
-       setupRequired(fhiclcpp @FHICLCPP_VERS@ @FHICLCPP_QUAL@ -f Linux64bit+2.6-2.5)
 
 Flavor     = Linuxppc
 Qualifiers = "@qualifier@"
@@ -27,18 +24,6 @@ Qualifiers = "@qualifier@"
        fileTest( ${UPS_PROD_DIR}/sl5.PPC.@qualifier@, -d, "${UPS_PROD_DIR}/sl5.PPC.@qualifier@ directory not found: SETUP ABORTED")
        envSet( ${UPS_PROD_NAME_UC}_FQ, sl5.PPC.@qualifier@ )
        exeActionRequired("setup__")
-       setupRequired(boost @BOOST_VERS@ @BOOST_QUAL@ -f Linuxppc)
-       setupRequired(fhiclcpp @FHICLCPP_VERS@ @FHICLCPP_QUAL@ -f Linuxppc)
-
-Flavor     = LinuxPPC
-Qualifiers = "@qualifier@"
-  Action = setup
-       prodDir()
-       fileTest( ${UPS_PROD_DIR}/sl5.PPC.@qualifier@, -d, "${UPS_PROD_DIR}/sl5.PPC.@qualifier@ directory not found: SETUP ABORTED")
-       envSet( ${UPS_PROD_NAME_UC}_FQ, sl5.PPC.@qualifier@ )
-       exeActionRequired("setup__")
-       setupRequired(boost @BOOST_VERS@ @BOOST_QUAL@ -f LinuxPPC)
-       setupRequired(fhiclcpp @FHICLCPP_VERS@ @FHICLCPP_QUAL@ -f LinuxPPC)
 
 Flavor     = Linux+2.6-2.5
 Qualifiers = "@qualifier@"
@@ -94,9 +79,9 @@ Common:
 	execute( true, NO_UPS_ENV )
     endif ( sh -c 'for dd in ${${UPS_PROD_NAME_UC}_FQ}/bin bin;do [ -d ${UPS_PROD_DIR}/$dd ] && exit;done;exit 1' )
 	    
-    # uncomment or add to this list as relevant
-    #setupRequired(boost @BOOST_VERS@ @BOOST_QUAL@)
-    #setupRequired(gcc @GCC_VERSION@ )
+       setupRequired(fhiclcpp @FHICLCPP_VERS@ @FHICLCPP_QUAL@ )
+       setupRequired(boost @BOOST_VERS@ @BOOST_QUAL@ )
+    setupRequired(gcc @GCC_VERSION@ )
 
 End:
 # End Group definition
