use generic forms

--- a/ups/messagefacility.table.in
+++ b/ups/messagefacility.table.in
@@ -1,5 +1,5 @@
 File    = table
-Product = messagefacility
+Product = @product@
 #*************************************************
 # Starting Group definition
 Group:
