--- a/ups/messagefacility.version.in
+++ b/ups/messagefacility.version.in
@@ -1,63 +1,53 @@
 FILE = version
-PRODUCT = messagefacility
+PRODUCT = @product@
 VERSION = @version@
 
 FLAVOR = Linux64bit+2.6-2.5
 QUALIFIERS = @qualifier@
-  DECLARER = qlu
+  DECLARER = CET
   DECLARED = @datime@
-  MODIFIER = qlu
+  MODIFIER = CET
   MODIFIED = @datime@
-  PROD_DIR = messagefacility/@version@
+  PROD_DIR = @product@/@version@
   UPS_DIR = ups
-  TABLE_FILE = messagefacility.table
-
-FLAVOR = LinuxPPC
-QUALIFIERS = @qualifier@
-  DECLARER = qlu
-  DECLARED = @datime@
-  MODIFIER = qlu
-  MODIFIED = @datime@
-  PROD_DIR = messagefacility/@version@
-  UPS_DIR = ups
-  TABLE_FILE = messagefacility.table
-
-FLAVOR = Linuxppc
-QUALIFIERS = @qualifier@
-  DECLARER = qlu
-  DECLARED = @datime@
-  MODIFIER = qlu
-  MODIFIED = @datime@
-  PROD_DIR = messagefacility/@version@
-  UPS_DIR = ups
-  TABLE_FILE = messagefacility.table
+  TABLE_FILE = @product@.table
 
 FLAVOR = Linux+2.6-2.5
 QUALIFIERS = @qualifier@
-  DECLARER = qlu
+  DECLARER = CET
   DECLARED = @datime@
-  MODIFIER = qlu
+  MODIFIER = CET
   MODIFIED = @datime@
-  PROD_DIR = messagefacility/@version@
+  PROD_DIR = @product@/@version@
   UPS_DIR = ups
-  TABLE_FILE = messagefacility.table
+  TABLE_FILE = @product@.table
 
 FLAVOR = Linux64bit+2.6-2.3.4
 QUALIFIERS = @qualifier@
-  DECLARER = qlu
+  DECLARER = CET
   DECLARED = @datime@
-  MODIFIER = qlu
+  MODIFIER = CET
   MODIFIED = @datime@
-  PROD_DIR = messagefacility/@version@
+  PROD_DIR = @product@/@version@
   UPS_DIR = ups
-  TABLE_FILE = messagefacility.table
+  TABLE_FILE = @product@.table
 
 FLAVOR = Linux+2.6-2.3.4
 QUALIFIERS = @qualifier@
-  DECLARER = qlu
+  DECLARER = CET
   DECLARED = @datime@
-  MODIFIER = qlu
+  MODIFIER = CET
   MODIFIED = @datime@
-  PROD_DIR = messagefacility/@version@
+  PROD_DIR = @product@/@version@
   UPS_DIR = ups
-  TABLE_FILE = messagefacility.table
+  TABLE_FILE = @product@.table
+
+FLAVOR = Linuxppc
+QUALIFIERS = @qualifier@
+  DECLARER = CET
+  DECLARED = @datime@
+  MODIFIER = CET
+  MODIFIED = @datime@
+  PROD_DIR = @product@/@version@
+  UPS_DIR = ups
+  TABLE_FILE = @product@.table
